--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="container2">
+        <!-- <div id="form"> -->
+            <div id="nav">
+            <nav class="bar">
+                <a href="services">Services</a>
+                <a href="Work With us">Work with us</a>
+                <a href="About">About</a>
+                <a href="Lets Talk" class="let">Lets Talk</a>
+            </nav>
+
+            </div>
+
+<!-- 
+        </div> -->
+
+        </div>
+
+    </div>
 </body>
 </html>
