--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div id="container">
         <div id="container2">
-        <!-- <div id="form"> -->
+
             <div id="nav">
-            <nav class="bar">
-                <a href="services">Services</a>
-                <a href="Work With us">Work with us</a>
-                <a href="About">About</a>
-                <a href="Lets Talk" class="let">Lets Talk</a>
+            <nav >
+                <a>Services</a>
+                <a>Work with us</a>
+                <a>About</a>
+             <div><a href="Lets Talk" >Lets Talk</a></div>
             </nav>
 
             </div>
 
-<!-- 
-        </div> -->
 
         </div>
 
-    </div>
+        </div>
+
+
 </body>
 </html>
