--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="form">
+      <h1> <b>We Make <br> Stuff <br> Happen</b></h1> 
+
+    </div>
+    <div id="text">
+    <p>Award-winning marketing strategy and <br>
+        training.Be as proud as your marketing <br>
+        as you are of your business.&#128080</p>
+        
+    </div>
+    <div id="button">
+        <button class="butt">social media bootcamp</button>
+    </div>
 </body>
 </html>
